--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,10 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+futures = "0.3.5"
+reqwest = "0.10.6"
 roux = "0.4.0"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
+tokio = {version = "0.2.21", features = ["macros"]}
