--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ version = "0.1.0"
 
 [dependencies]
 futures = "0.3.5"
+futures-async-stream = "0.2.2"
 reqwest = "0.10.6"
 roux = "0.4.0"
 serde = "1.0"
