--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,16 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+egg-mode = "0.15.0"
 futures = "0.3.5"
 futures-async-stream = "0.2.2"
-reqwest = "0.10.6"
+#google-youtube3 = "1.0.13+20200402" - не видит установленное openssl 
+quick-xml = "0.18.1"
+reqwest = {version = "0.10.6", features = ["json"]}
 roux = "0.4.0"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
 tokio = {version = "0.2.21", features = ["macros"]}
+xml-rs = "0.8"
+#google-youtube3-cli = "1.0.13+20200402" коммандная строка - не то но как вариант можно стырить кое че
