--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,12 @@ futures-async-stream = "0.2.2"
 quick-xml = "0.18.1"
 reqwest = {version = "0.10.6", features = ["json"]}
 roux = "0.4.0"
+roxmltree = "0.13.0"
 serde = "1.0"
+serde-xml-rs = "0.4.0"
 serde_derive = "1.0"
 serde_json = "1.0"
 tokio = {version = "0.2.21", features = ["macros"]}
 xml-rs = "0.8"
+xmlparser = "0.13.2"
 #google-youtube3-cli = "1.0.13+20200402" коммандная строка - не то но как вариант можно стырить кое че
