--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,8 @@ serde_derive = "1.0"
 serde_json = "1.0"
 tokio = {version = "0.2.21", features = ["macros"]}
 colored = "2"
-RustyXML = "0.3.0"
+crossbeam = "0.8.0"
+# RustyXML = "0.3.0"
 # xml-rs = "0.8" 
 # xmlparser = "0.13.2" 
 #google-youtube3-cli = "1.0.13+20200402" коммандная строка - не то но как вариант можно стырить кое че
