--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ serde = "1.0"
 serde-xml-rs = "0.4.0"
 serde_derive = "1.0"
 serde_json = "1.0"
-tokio = "1.1.0"
+tokio = {version = "1.1.0", features = ["macros"]}
 # tokio = {version = "0.2.21", features = ["macros"]}
 colored = "2"
 crossbeam = "0.8.0"
