--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ futures-async-stream = "0.2.2"
 # quick-xml = "0.18.1"
 reqwest = {version = "0.11.0", features = ["json","blocking"]}
 roux = "0.4.0"
+log = "0.4"
+simplelog = "0.9"
 serde = "1.0"
 serde-xml-rs = "0.4.0"
 serde_derive = "1.0"
