--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ serde_derive = "1.0"
 serde_json = "1.0"
 tokio = {version = "1.1.0", features = ["macros"]}
 # tokio = {version = "0.2.21", features = ["macros"]}
-colored = "2"
+ansi_term = "0.12"
 crossbeam = "0.8.0"
 # RustyXML = "0.3.0"
 # xml-rs = "0.8" 
