--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ serde = "1.0"
 serde-xml-rs = "0.4.0"
 serde_derive = "1.0"
 serde_json = "1.0"
+chrono = "0.4"
 tokio = {version = "1.1.0", features = ["macros"]}
 # tokio = {version = "0.2.21", features = ["macros"]}
 ansi_term = "0.12"
