--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ chrono = "0.4"
 tokio = {version = "1.1.0", features = ["macros"]}
 # tokio = {version = "0.2.21", features = ["macros"]}
 ansi_term = "0.12"
-crossbeam = "0.8.0"
+# crossbeam = "0.8.0"
 num_cpus = "1.0"
 # RustyXML = "0.3.0"
 # xml-rs = "0.8" 
