--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ tokio = {version = "1.1.0", features = ["macros"]}
 ansi_term = "0.12"
 # crossbeam = "0.8.0"
 num_cpus = "1.0"
+# threadpool = "1.0"
 # RustyXML = "0.3.0"
 # xml-rs = "0.8" 
 # xmlparser = "0.13.2" 
