--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,11 +21,13 @@ serde-xml-rs = "0.4.0"
 serde_derive = "1.0"
 serde_json = "1.0"
 chrono = "0.4"
-tokio = {version = "1.1.0", features = ["macros"]}
-# tokio = {version = "0.2.21", features = ["macros"]}
+tokio = {version = "1.5.0", features = ["macros"]}
+# tokio = {version = "0.2.0", features = ["macros"]}
+# tokio-compat = "0.1.6"
 ansi_term = "0.12"
 # crossbeam = "0.8.0"
 num_cpus = "1.0"
+# async-std = "1.9.0"#remove later its only for example
 # threadpool = "1.0"
 # RustyXML = "0.3.0"
 # xml-rs = "0.8" 
