--- a/Config.toml
+++ b/Config.toml
@@ -1,4 +1,10 @@
-[project_parameters]
+[params]
+reddit_user_agent = "example"
+reddit_client_id = "example"
+reddit_client_secret = "example"
+reddit_username = "example"
+reddit_password = "example"
+
 starting_check_link = "https://www.google.com/"
 arxiv_link = "https://www.google.com/" # https://arxiv.org/   http://export.arxiv.org/rss/   http://export.arxiv.org/rss/astro-ph.CO
 biorxiv_link = "https://www.google.com/" # http://connect.biorxiv.org/
