--- a/config/Default.toml
+++ b/config/Default.toml
@@ -7,6 +7,7 @@ enable_all_cleaning_warning_logs_directory = true
 enable_prints_handle = true
 enable_error_prints_handle = true
 warning_logs_directory_name = "warning_logs"
+unhandled_success_handled_success_are_there_items_initialized_posts_dir = "unhandled_success_handled_success_are_there_items_initialized_posts"
 # // pub const ERROR_LOGS_DIRECTORY_NAME: &str = "error_logs";
 enable_all_time_measurement = true
 enable_common_time_measurement = true
@@ -14,10 +15,14 @@ enable_common_time_measurement = true
 [enable_providers]
 enable_arxiv = true
 enable_biorxiv = true
+enable_github = true
 enable_habr = true
 enable_medrxiv = true
 enable_reddit = true
 enable_twitter = true
+
+[github_authorization]
+github_token = "example"
 
 [reddit_authorization]
 reddit_user_agent = "example"
@@ -30,6 +35,7 @@ reddit_password = "example"
 starting_check_link = "https://www.google.com/"
 arxiv_link = "https://www.google.com/" # https://arxiv.org/   http://export.arxiv.org/rss/   http://export.arxiv.org/rss/astro-ph.CO
 biorxiv_link = "https://www.google.com/" # http://connect.biorxiv.org/
+github_link = "https://github.com"
 habr_link = "https://www.google.com/" # https://habr.com/ru/
 medrxiv_link = "https://www.google.com/" # http://connect.medrxiv.org/
 reddit_link = "https://www.reddit.com/"
@@ -38,6 +44,7 @@ twitter_link = "https://www.google.com/" # must be not only 1 str but many - twi
 [enable_prints]
 enable_prints_arxiv = true
 enable_prints_biorxiv = true
+enable_prints_github = true
 enable_prints_habr = true
 enable_prints_medrxiv = true
 enable_prints_reddit = true
@@ -46,6 +53,7 @@ enable_prints_twitter = true
 [enable_warning_prints]
 enable_warning_prints_for_arxiv = true
 enable_warning_prints_for_biorxiv = true
+enable_warning_prints_for_github = true
 enable_warning_prints_for_habr = true
 enable_warning_prints_for_medrxiv = true
 enable_warning_prints_for_reddit = true
@@ -54,6 +62,7 @@ enable_warning_prints_for_twitter = true
 [enable_error_prints]
 enable_error_prints_for_arxiv = true
 enable_error_prints_for_biorxiv = true
+enable_error_prints_for_github = true
 enable_error_prints_for_habr = true
 enable_error_prints_for_medrxiv = true
 enable_error_prints_for_reddit = true
@@ -62,6 +71,7 @@ enable_error_prints_for_twitter = true
 [enable_cleaning_warning_logs_directory]
 enable_cleaning_warning_logs_directory_for_arxiv = true
 enable_cleaning_warning_logs_directory_for_biorxiv = true
+enable_cleaning_warning_logs_directory_for_github = true
 enable_cleaning_warning_logs_directory_for_habr = true
 enable_cleaning_warning_logs_directory_for_medrxiv = true
 enable_cleaning_warning_logs_directory_for_reddit = true
@@ -70,6 +80,7 @@ enable_cleaning_warning_logs_directory_for_twitter = true
 [enable_time_measurement]
 enable_arxiv_time_measurement = true
 enable_biorxiv_time_measurement = true
+enable_github_time_measurement = true
 enable_habr_time_measurement = true
 enable_medrxiv_time_measurement = true
 enable_reddit_time_measurement = true
