--- a/.github/workflows/my-pipeline.yml
+++ b/.github/workflows/my-pipeline.yml
@@ -3,4 +3,23 @@
 # -------------------
 name: CI
 
-#on: [push]
+on: 
+  push:
+    branches: 
+      - master
+      
+jobs: 
+  my-testing1:
+    runs-on: ubuntu/latest
+    
+    steps:
+      - name: Print_Hello_Message1
+        run: echo "hello_world1"
+        
+  my-testing2:
+    runs-on: ubuntu/latest
+    
+    steps:
+      - name: Print_Hello_Message2
+        run: echo "hello_world2"
+  
