--- a/.github/workflows/my-pipeline.yml
+++ b/.github/workflows/my-pipeline.yml
@@ -18,6 +18,7 @@ jobs:
         
   my-testing2:
     runs-on: ubuntu-latest
+    needs: [my-testing1]
     
     steps:
       - name: Print_Hello_Message2
