env github actions tutorial

--- a/.github/workflows/my-pipeline.yml
+++ b/.github/workflows/my-pipeline.yml
@@ -2,6 +2,10 @@
 # Github actions
 # -------------------
 name: CI
+env: 
+   APPLICATION_NAME: "tufa"
+   PACKAGE_NAME: "tufa-backend-package-&{{ github.sha }}"
+   
 
 on: 
   push:
