--- a/.github/workflows/my-pipeline.yml
+++ b/.github/workflows/my-pipeline.yml
@@ -34,4 +34,7 @@ jobs:
     steps:
       - name: Print_Hello_Message2
         run: echo "hello_world2"
+        
+      - name: List_current_folder
+        run: ls -a
   
