lets test aws if it is here

--- a/.github/workflows/my-pipeline.yml
+++ b/.github/workflows/my-pipeline.yml
@@ -26,6 +26,12 @@ jobs:
           echo "hello_message_few_commands2"
           echo "hello_message_few_commands3 Application_name: ${{ env.APPLICATION_NAME}}"
           echo "hello_message_few_commands3 Package_name: ${{ env.PACKAGE_NAME}}"
+          
+      - name: lets test aws if it is here
+        run: aws --version
+        
+      - name: lets test rustc if it is here
+        run: $ rustc --version
         
   my-testing2:
     runs-on: ubuntu-latest
