--- a/.github/workflows/my-pipeline.yml
+++ b/.github/workflows/my-pipeline.yml
@@ -56,5 +56,5 @@ jobs:
         run: rustc --version
         
       - name: Cargo test
-        run: cargo test
+        run: cargo +nightly test
   
