user credentials config again

--- a/config/user_credentials.toml
+++ b/config/user_credentials.toml
@@ -1,3 +1,6 @@
+[github_authorization]
+github_token = "example"
+
 [reddit_authorization]
 reddit_user_agent = "example"
 reddit_client_id = "example"
