--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -1,50 +1,49 @@
 name: CI
 on: [push]
-# env: 
+# env:
 #    APPLICATION_NAME: "tufa"
 #    PACKAGE_NAME: "tufa-backend-package-${{ github.sha }}"
 
-# on: 
+# on:
 #   push:
-#     branches: 
+#     branches:
 #       - master
-      
-jobs:   
+
+jobs:
   tests:
     runs-on: ubuntu-latest
-#     needs: [my-testing1]
-    
+    #     needs: [my-testing1]
+
     steps:
       # - name: Git clone my repo
-      #   uses: actions/checkout@v1 
-        
+      #   uses: actions/checkout@v1
+
       # - name: lets test cargo if it is here
       #   run: cargo --version
-        
+
       # - name: lets test rustc if it is here
       #   run: rustc --version
-        
+
       # - name: Rustup default nightly
       #   run: rustup default nightly
-        
+
       # - name: Rustup update
       #   run: rustup update
-        
-      # - name: cargo test
-      #   run: cargo +nightly test 
-        - uses: actions/checkout@v1
-        - uses: actions-rs/toolchain@v1
-          with:
-            toolchain: nightly
-        - name: rustup default nightly
-            run: rustup default nightly
-        - name: build
-          uses: actions-rs/cargo@v1
-          with:
-            command: build
-        - name: test
-          uses: actions-rs/cargo@v1
-          with:
-            command: test
 
-  
+      # - name: cargo test
+      #   run: cargo +nightly test
+      - uses: actions/checkout@v1
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: nightly
+      - name: Rustup default nightly
+        run: rustup default nightly
+
+      - name: build
+        uses: actions-rs/cargo@v1
+        with:
+          command: build
+      - name: test
+        uses: actions-rs/cargo@v1
+        with:
+          command: test
