--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -43,7 +43,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: build
-      - name: test
+      - name: test CI
         uses: actions-rs/cargo@v1
         with:
-          command: test
+          command: test ci
