github actions running only tests with prefix ci

--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -45,5 +45,6 @@ jobs:
           command: build
       - name: test CI
         uses: actions-rs/cargo@v1
-        with:
-          command: test ci
+        run: cargo test ci
+        # with:
+          # command: test ci
