--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -44,7 +44,7 @@ jobs:
         with:
           command: build
       - name: test CI
-        uses: actions-rs/cargo@v1
-        run: cargo test ci
+        # uses: actions-rs/cargo@v1
+        run: cargo +nightly test ci
         # with:
           # command: test ci
