forgot to commit regex crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,3 +41,4 @@ config = "0.10"
 lazy_static = "1.4"
 #tutorial from https://blog.logrocket.com/configuration-management-in-rust-web-services/
 html_parser = "0.6.2"
+regex = "1.5"
