move tests into library

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,3 +42,4 @@ lazy_static = "1.4"
 #tutorial from https://blog.logrocket.com/configuration-management-in-rust-web-services/
 html_parser = "0.6.2"
 regex = "1.5"
+library = { path = "./library" }
