--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -44,5 +44,8 @@ jobs:
         with:
           command: build
           
+      - name: cd library
+        run: cd library
+        
       - name: test CI
         run: cargo test ci
