cd library && cargo test ci

--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -44,8 +44,5 @@ jobs:
         with:
           command: build
           
-      - name: cd library
-        run: cd library
-        
-      - name: test CI
-        run: cargo test ci
+      - name: cd library && cargo test ci
+        run: cd library && cargo test ci
