--- a/libs/tests_lib/Cargo.toml
+++ b/libs/tests_lib/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "library"
+name = "tests_lib"
 version = "0.1.0"
 authors = ["kuqmua <serezhashmakov@outlook.com>"]
 edition = "2018"
