fixed workflow github actions error

--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -45,4 +45,4 @@ jobs:
           command: build
           
       - name: cd libs/tests_lib && cargo test ci
-        run: cd library && cargo test ci
+        run: cd libs/tests_lib && cargo test ci
