--- a/libs/config_lib/Cargo.toml
+++ b/libs/config_lib/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "get_config_lib"
+name = "config_lib"
 version = "0.1.0"
 authors = ["kuqmua <serezhashmakov@outlook.com>"]
 edition = "2018"
