--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,26 +7,30 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-#egg-mode = "0.15.0"//twitter
 futures = "0.3.5"
 futures-async-stream = "0.2.2"
-#google-youtube3 = "1.0.13+20200402" - do not saw openssl, under linux its all good
-# quick-xml = "0.18.1"
 reqwest = {version = "0.11.0", features = ["json","blocking"]}
 roux = "0.4.0"
-# log = "0.4"
-# simplelog = "0.9"
 serde = "1.0"
 serde-xml-rs = "0.4.0"
 serde_derive = "1.0"
 serde_json = "1.0"
 chrono = "0.4"
 tokio = {version = "1.5.0", features = ["macros"]}
+ansi_term = "0.12"
+num_cpus = "1.0"
+toml = "0.5"
+html_parser = "0.6.2"
+regex = "1.5"
+config_lib = { path = "./libs/config_lib" }
+#egg-mode = "0.15.0"//twitter
+#google-youtube3 = "1.0.13+20200402" - do not saw openssl, under linux its all good
+# quick-xml = "0.18.1"
+# log = "0.4"
+# simplelog = "0.9"
 # tokio = {version = "0.2.0", features = ["macros"]}
 # tokio-compat = "0.1.6"
-ansi_term = "0.12"
 # crossbeam = "0.8.0"
-num_cpus = "1.0"
 # async-std = "1.9.0"#remove later its only for example
 # threadpool = "1.0"
 # RustyXML = "0.3.0"
@@ -34,11 +38,9 @@ num_cpus = "1.0"
 # xmlparser = "0.13.2" 
 #google-youtube3-cli = "1.0.13+20200402" коммандная строка - не то но как вариант можно стырить кое че
 # strum = { version = "0.20", features = ["derive"] }#for enum into string
-toml = "0.5"
 #tutorial from https://blog.logrocket.com/configuration-management-in-rust-web-services/
 # warp = "0.2"
 #tutorial from https://blog.logrocket.com/configuration-management-in-rust-web-services/
-html_parser = "0.6.2"
-regex = "1.5"
+
+[dev-dependencies]
 tests_lib = { path = "./libs/tests_lib" }
-config_lib = { path = "./libs/config_lib" }
