--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ toml = "0.5"
 html_parser = "0.6.2"
 regex = "1.5"
 config_lib = { path = "./libs/config_lib" }
+providers_info_lib = { path = "./libs/providers_info_lib" }
 #egg-mode = "0.15.0"//twitter
 #google-youtube3 = "1.0.13+20200402" - do not saw openssl, under linux its all good
 # quick-xml = "0.18.1"
