--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,8 @@ num_cpus = "1.0"
 toml = "0.5"
 html_parser = "0.6.2"
 regex = "1.5"
-mongodb = "1.2.2"
+# mongodb = "1.2.2"
+mongodb = "0.9.2"
 config_lib = { path = "./libs/config_lib" }
 providers_info_lib = { path = "./libs/providers_info_lib" }
 #egg-mode = "0.15.0"//twitter
