--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,9 @@ services:
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      - POSTGRES_DB=stage
+      POSTGRES_DB: postgres
     volumes:
-      - pg_project:/var/lib/postgresql/data
+      - ./postgresql_volume:/data/db
     ports:
       - 5432:5432
   mongodb_service:
@@ -22,7 +22,7 @@ services:
     ports:
       - 27017:27017
     volumes:
-      - mongodb_data_container:/data/db
+      - ./mongodb_volume:/data/db
   # rust-backend:
   #   image: "rust:1.47"
   #   volumes:
@@ -30,5 +30,5 @@ services:
   #   environment: 
   #     - USER=sergey
 volumes:
-  pg_project:
-  mongodb_data_container:
+  postgresql_volume:
+  mongodb_volume:
