renaming mongo integration

--- a/libs/mongo_integration/Cargo.toml
+++ b/libs/mongo_integration/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "mongo_demo"
+name = "mongo_integration"
 version = "0.1.0"
 authors = ["kuqmua <serezhashmakov@outlook.com>"]
 edition = "2018"
