--- a/libs/mongo_integration/Cargo.toml
+++ b/libs/mongo_integration/Cargo.toml
@@ -9,3 +9,7 @@ edition = "2018"
 [dependencies]
 tokio = "0.2.25"#last supported mongo version
 mongodb = "1.2.2"
+futures = "0.3"
+serde = "1.0"
+serde_derive = "1.0"
+serde_json = "1.0"
