add mongo to providers_lib to check bson type

--- a/libs/providers_info_lib/Cargo.toml
+++ b/libs/providers_info_lib/Cargo.toml
@@ -12,3 +12,4 @@ serde_json = "1.0"
 serde_derive = "1.0"
 config_lib = { path = "../config_lib" }
 mongo_integration = { path = "../mongo_integration" }
+mongodb = "1.2.2" #to have possibility type checking mongo::bson
