mongo_authorization data in config

--- a/config/User_credentials.toml
+++ b/config/User_credentials.toml
@@ -8,3 +8,10 @@ reddit_client_id = "example"
 reddit_client_secret = "example"
 reddit_username = "example"
 reddit_password = "example"
+
+[mongo_authorization]
+is_remote = true
+mongo_local_login = "example"
+mongo_local_password = "example"
+mongo_remote_login = "example"
+mongo_remote_password = "example"
