restructure mongo urls with user_credentials

--- a/config/User_credentials.toml
+++ b/config/User_credentials.toml
@@ -9,9 +9,14 @@ reddit_client_secret = "example"
 reddit_username = "example"
 reddit_password = "example"
 
-[mongo_authorization]
-is_remote = true
-mongo_local_login = "example"
-mongo_local_password = "example"
-mongo_remote_login = "example"
-mongo_remote_password = "example"
+[mongo_own_authorization]
+mongo_own_login = "example"
+mongo_own_password = "example"
+mongo_own_ip = "example"
+mongo_own_port = "example"
+
+[mongo_cloud_authorization]
+mongo_cloud_login = "example"
+mongo_cloud_password = "example"
+mongo_cloud_cluster_name = "example"
+mongo_cloud_cluster_params = "example"
