get_providers_link_parts_wrapper integrated with check_new_posts_threads_parts

--- a/libs/providers_info_lib/Cargo.toml
+++ b/libs/providers_info_lib/Cargo.toml
@@ -12,3 +12,4 @@ serde_json = "1.0"
 serde_derive = "1.0"
 config_lib = { path = "../config_lib" }
 mongo_integration = { path = "../mongo_integration" }
+prints_lib = { path = "../prints_lib" }
