colors for other print types

--- a/config/Development.toml
+++ b/config/Development.toml
@@ -139,3 +139,9 @@ success_blue = 0
 partial_success_red = 0
 partial_success_green = 200
 partial_success_blue = 155
+cleaning_red = 230
+cleaning_green = 234
+cleaning_blue = 255
+time_measurement_red = 255
+time_measurement_green = 153
+time_measurement_blue = 170
