--- a/config/Production.toml
+++ b/config/Production.toml
@@ -9,6 +9,8 @@ enable_providers = true
 enable_cleaning_warning_logs_directory = true
 enable_time_measurement = true
 enable_provider_links_limit = true
+enable_common_providers_links_limit = true
+common_providers_links_limit = 10 # u32 
 enable_prints = true
 enable_error_prints = true
 enable_warning_high_prints = true
@@ -143,33 +145,33 @@ enable_links_limit_for_reddit = true
 enable_links_limit_for_twitter = true
 
 [providers_links_limits]
-links_limit_for_arxiv = 10
-links_limit_for_biorxiv = 10
-links_limit_for_github = 10
-links_limit_for_habr = 10
-links_limit_for_medrxiv = 10
-links_limit_for_reddit = 10
-links_limit_for_twitter = 10
+links_limit_for_arxiv = 10 # u32
+links_limit_for_biorxiv = 10 # u32
+links_limit_for_github = 10 # u32
+links_limit_for_habr = 10 # u32
+links_limit_for_medrxiv = 10 # u32
+links_limit_for_reddit = 10 # u32
+links_limit_for_twitter = 10 # u32
 
 [print_colors]
-error_red = 255
-error_green = 0
-error_blue = 0
-warning_high_red = 255
-warning_high_green = 165
-warning_high_blue = 0
-warning_low_red = 255
-warning_low_green = 255
-warning_low_blue = 0
-success_red = 0
-success_green = 255
-success_blue = 0
-partial_success_red = 0
-partial_success_green = 200
-partial_success_blue = 155
-cleaning_red = 230
-cleaning_green = 234
-cleaning_blue = 255
-time_measurement_red = 255
-time_measurement_green = 153
-time_measurement_blue = 170
+error_red = 255 # u8
+error_green = 0 # u8
+error_blue = 0 # u8
+warning_high_red = 255 # u8
+warning_high_green = 165 # u8
+warning_high_blue = 0 # u8
+warning_low_red = 255 # u8
+warning_low_green = 255 # u8
+warning_low_blue = 0 # u8
+success_red = 0 # u8
+success_green = 255 # u8
+success_blue = 0 # u8
+partial_success_red = 0 # u8
+partial_success_green = 200 # u8
+partial_success_blue = 155 # u8
+cleaning_red = 230 # u8
+cleaning_green = 234 # u8
+cleaning_blue = 255 # u8
+time_measurement_red = 255 # u8
+time_measurement_green = 153 # u8
+time_measurement_blue = 170 # u8
