--- a/libs/mongo_integration/Cargo.toml
+++ b/libs/mongo_integration/Cargo.toml
@@ -11,6 +11,7 @@ tokio = "0.2.25"#last supported mongo version
 mongodb = "1.2.2"
 futures = "0.3"
 prints_lib = { path = "../prints_lib" }
+config_lib = { path = "../config_lib" }
 # serde = "1.0"
 # serde_derive = "1.0"
 # serde_json = "1.0"
