--- a/config/Testing.toml
+++ b/config/Testing.toml
@@ -9,7 +9,7 @@ enable_providers = true
 enable_cleaning_warning_logs_directory = true
 enable_time_measurement = true
 enable_provider_links_limit = true
-enable_common_providers_links_limit = true
+enable_common_providers_links_limit = false
 common_providers_links_limit = 1 # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
 enable_randomize_order_for_providers_link_parts_for_mongo = true
 enable_prints = true
@@ -31,11 +31,11 @@ enable_cleaning_warning_logs_directory_prints_for_all_providers = true
 
 [mongo_params]
 is_cloud = true
-db_name_handle = "provider_links"
-db_collection_handle_second_part = "_link_parts"
-db_collection_document_field_name_handle = "link_part"
+providers_db_name_handle = "provider_links" # rename this into providers_...
+providers_db_collection_handle_second_part = "_link_parts" # rename this into providers_...
+providers_db_collection_document_field_name_handle = "link_part" # rename this into providers_...
 path_to_provider_link_parts_folder = "./providers_link_parts/"
-file_extension = ".json"
+log_file_extension = ".json" # rename this into log_...
 mongo_own_first_handle_url_part = "mongodb://"
 mongo_own_second_handle_url_part = ":"
 mongo_own_third_handle_url_part = "@"
@@ -155,7 +155,7 @@ enable_randomize_order_for_reddit_link_parts_for_mongo = true
 enable_randomize_order_for_twitter_link_parts_for_mongo = true
 
 [providers_links_limits]
-links_limit_for_arxiv = 3 # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
+links_limit_for_arxiv = 100 # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
 links_limit_for_biorxiv = 3 # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
 links_limit_for_github = 3 # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
 links_limit_for_habr = 3 # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
